--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="recyclerview">RecyclerView</string>
     <string name="ok">ok</string>
     <string name="loading">loading data...</string>
+    <string name="user_detail">User Detail</string>
 </resources>
